opam-version: "1.2"
name: "md2mld"
maintainer: "Marcello Seri <marcello.seri@gmail.com>"
authors: [ "Marcello Seri <marcello.seri@gmail.com>" ]
license: "ISC"
homepage: "https://github.com/mseri/md2mld"
dev-repo: "https://github.com/mseri/md2mld.git"
bug-reports: "https://github.com/mseri/md2mld/issues"
doc: "https://mseri.github.io/md2mld/"
tags: [  ]
build: [["jbuilder" "build" "-p" name "-j" jobs]]
depends: [
  "jbuilder" {build}
  "base-bytes"
  "omd"
]
