opam-version: "2.0"
name: "md2mld"
synopsis: "Little cli tool to convert md files into mld files"
maintainer: "Marcello Seri <marcello.seri@gmail.com>"
authors: "Marcello Seri <marcello.seri@gmail.com>"
license: "ISC"
homepage: "https://github.com/mseri/md2mld"
doc: "https://mseri.github.io/md2mld/"
bug-reports: "https://github.com/mseri/md2mld/issues"
depends: [
  "ocaml"
  "dune" {build & >= "1.4.0"}
  "base-bytes"
  "omd"
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/mseri/md2mld.git"
