opam-version: "2.0"
name: "md2mld"
synopsis: "Little cli tool to convert md files into mld files"
maintainer: "Marcello Seri <marcello.seri@gmail.com>"
authors: "Marcello Seri <marcello.seri@gmail.com>"
license: "ISC"
homepage: "https://github.com/mseri/md2mld"
doc: "https://mseri.github.io/md2mld/"
bug-reports: "https://github.com/mseri/md2mld/issues"
depends: [
  "ocaml" {>= "4.08"}
  "dune" {>= "2.0"}
  "base-bytes"
  "omd" {>= "2.0.0~alpha2"}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs "@install" "@runtest" {with-test}]
]
dev-repo: "git+https://github.com/mseri/md2mld.git"
