(rule
 (targets readme.output)
 (deps ../README.md)
 (action
  (with-stdout-to
   %{targets}
   (run %{exe:../src/md2mld.exe} %{deps})
  )
 )
)

(rule
 (targets readme-min-header-3.output)
 (deps ../README.md)
 (action
  (with-stdout-to
   %{targets}
   (run %{exe:../src/md2mld.exe} -min-header 3 %{deps})
  )
 )
)

(rule
 (alias runtest)
 (action
  (diff readme.expected readme.output)
 )
)

(rule
 (alias runtest)
 (action
  (diff readme-min-header-3.expected readme-min-header-3.output)
 )
)
